--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,53 +18,24 @@
         <android.support.design.widget.AppBarLayout
                 android:id="@+id/appbar"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:background="#00000000"
-                android:fitsSystemWindows="true">
-            <android.support.design.widget.CollapsingToolbarLayout
-                    android:id="@+id/collapsing_toolbar"
+                android:layout_height="wrap_content"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                android:transitionName="appBar">
+            <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
-                    app:statusBarScrim="#ff0000"
-                    android:fitsSystemWindows="true">
-                <ImageView
-                        android:id="@+id/backdrop"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="centerCrop"
-                        app:layout_collapseMode="parallax"
-                        android:src="@drawable/giraffe"
-                        android:fitsSystemWindows="true"/>
-
-                <android.support.design.widget.TabLayout
-                        android:id="@+id/tabs"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:translationY="0dp"
-                        app:tabGravity="center"
-                        app:tabIndicatorColor="@android:color/white"
-                        app:tabMode="scrollable"
-                        android:layout_gravity="bottom|center_horizontal"
-                        android:fitsSystemWindows="false"
-                        android:layout_marginBottom="24dp"/>
-                <android.support.v7.widget.Toolbar
-                        android:id="@+id/toolbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="?attr/actionBarSize"
-                        app:layout_scrollFlags="scroll|enterAlways"
-                        android:fitsSystemWindows="false"/>
-
-            </android.support.design.widget.CollapsingToolbarLayout>
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_scrollFlags="scroll|enterAlways"
+                    android:fitsSystemWindows="false"/>
         </android.support.design.widget.AppBarLayout>
 
-            <FrameLayout
-                    android:id="@+id/container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                    android:fitsSystemWindows="true"
-                    app:behavior_overlapTop="24dp"/>
+        <FrameLayout
+                android:id="@+id/container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:fitsSystemWindows="true"
+                android:transitionName="container"/>
 
     </android.support.design.widget.CoordinatorLayout>
     <android.support.design.widget.NavigationView
